Bug 159066 - PDF export from Calc does not save OLE objects Alt text
Summary: PDF export from Calc does not save OLE objects Alt text
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Printing and PDF export (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Tibor Nagy
URL:
Whiteboard: target:24.8.0
Keywords:
Depends on:
Blocks: PDF-Accessibility
  Show dependency treegraph
 
Reported: 2024-01-08 01:09 UTC by Gabor Kelemen (Collabora)
Modified: 2024-01-11 13:15 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Example file from Calc with charts (23.19 KB, application/vnd.oasis.opendocument.spreadsheet)
2024-01-08 01:09 UTC, Gabor Kelemen (Collabora)
Details
The document in Calc and PDF version in PAC tool (117.86 KB, image/png)
2024-01-08 01:09 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2024-01-08 01:09:22 UTC
Created attachment 191802 [details]
Example file from Calc with charts

When the attached Calc document is exported to PDF with PDF/UA enabled, the PAC tool gives an error message about the first chart not having alternative text, but in the document that is provided.

1. Open attached document
2. Right click the bar chart, select Alt text to see it's indeed filled. The other chart is marked as decorative, that is exported correctly.
3. File - Export as PDF, enable PDF/UA in the dialog
4. Open the PDF in the PAC tool
-> Error message: 
"Figure"-Strukturelement ohne Alternativtext

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 78027c68397f26aec9051b82388cd7452ec66e3d
CPU threads: 15; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: de-DE (hu_HU); UI: de-DE
Calc: threaded

This happens in master even with the patch of bug 123870 applied (https://gerrit.libreoffice.org/c/core/+/161581 ).
Comment 1 Gabor Kelemen (Collabora) 2024-01-08 01:09:36 UTC
Created attachment 191803 [details]
The document in Calc and PDF version in PAC tool
Comment 2 Commit Notification 2024-01-11 13:15:21 UTC
Tibor Nagy committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/37eb62c995a72fcd01d5f79e8b04fa0578cb822b

tdf#159066 sc: fix OLE object alternative text (PDF/UA export)

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.