tdf#159066 sc: fix OLE object alternative text (PDF/UA export)

Change-Id: I0af9cf61cafbe7ba93d08ed22fc11bb173612bfe
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/161904
Tested-by: Jenkins
Reviewed-by: Nagy Tibor <tibor.nagy.extern@allotropia.de>